# Models

./: .gitignore  EXPLAINER.md  README.md  pyproject.toml
src/: __about__.py
src/agents/: client_agent.py
src/quantmodels/: __init__.py  config.py  main.py
src/quantmodels/agents/: client_agent.py
src/quantmodels/client_data/: aggregate.py
src/quantmodels/quant/client_data/: aggregate.py  client_positioning.py  comparisons.py  engage.py  trading_details.py
src/quantmodels/selection_engine/: categories.py  corr_charts.py  selection_algorithm.py
tests/: __init__.py
