[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmodels"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Python package for creating proprietary quantitative financial models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-genai>=1.60.0",
    "alpaca-py>=0.43.2",
    "google-generativeai>=0.8.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your_username/QuantModels" # TODO: Update with your repo URL
"Bug Tracker" = "https://github.com/your_username/QuantModels/issues" # TODO: Update with your repo URL

[tool.setuptools.packages.find]
where = ["src"] # Look for packages in the 'src' directory
